--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -2,7 +2,8 @@
 
 <div  id="popupContainer" >
   <div layout="row" layout-wrap>
-    <md-card ng-repeat="x in jsonRecord"
+    <md-card ng-repeat="x in values=(jsonRecord| customFilter:manufactureArray
+          :storageArray:osArray:cameraArray)">
      style="height:550px;width:250px;background-color:white;" flex="30">
       <md-card-title>
         <img style="height:350px;width:300px;" ng-src={{x.image.small}} class="md-card-image"><br>
