--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -8,11 +8,10 @@
           <fieldset class="standard">
             <!-- This will create a list of multiple checkbox with multiple values with title  Manufacturer -->
             <legend>Manufacturer </legend>
-              <div ng-repeat="x in jsonRecord |unique:'specs.manufacturer'|orderBy:'specs.manufacturer'">
-                <md-checkbox ng-click="toggle('manufacturer',x.specs.manufacturer)"> {{x.specs.manufacturer}}
+              <div ng-repeat="x in jsonRecord |unique1:'manufacturer' ">
+                <md-checkbox ng-click="toggle('manufacturer',x)"> {{x.specs.manufacturer}}
                 </md-checkbox>
             </div>
-
           </fieldset>
         </div>
       </div>
@@ -22,9 +21,9 @@
           <fieldset class="standard">
             <!-- This will create a list of multiple checkbox with multiple values with title  Storage -->
             <legend>Storage </legend>
-            <div ng-repeat="item in removeDuplicateStorage">
+            <div ng-repeat="x in jsonRecord |unique1:'storage'">
               <md-checkbox ng-click="toggle('storage', x)">
-                {{item }}
+                {{x.specs.storage}}
               </md-checkbox>
             </div>
           </fieldset>
@@ -35,10 +34,10 @@
         <div>
           <fieldset class="standard">
             <!-- This will create a list of multiple checkbox with multiple values with title  OS -->
-            <legend>OS </legend>
-            <div ng-repeat="item in removeDuplicateOS">
+            <legend>OS</legend>
+            <div ng-repeat="x in jsonRecord |unique1:'os'">
               <md-checkbox ng-click="toggle('os', x)">
-                {{ item }}
+                {{ x.specs.os }}
               </md-checkbox>
             </div>
 
@@ -51,9 +50,9 @@
           <fieldset class="standard">
             <!-- This will create a list of multiple checkbox with multiple values with title  Camera -->
             <legend>Camera </legend>
-            <div ng-repeat="item in removeDuplicateCamera">
+            <div ng-repeat="x in jsonRecord |unique1:'camera'">
               <md-checkbox  ng-click="toggle('camera', x)">
-                {{ item }}
+                {{ x.specs.camera }}
               </md-checkbox>
           </fieldset>
         </div>
