--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -2,8 +2,10 @@
 
 <div  id="popupContainer" >
   <div layout="row" layout-wrap>
+
+    <!-- using the customFilter to traverse through all the list -->
     <md-card ng-repeat="x in jsonRecord | customFilter : arrayManufacturer : arrayStorage : osarray :cameraarray">
-     
+
       <md-card-title>
         <img style="height:350px;width:300px;" ng-src={{x.image.small}} class="md-card-image"><br>
       </md-card-title>
@@ -15,7 +17,8 @@
           {{"Price : "+x.price}} <br>
           {{"OS : "+x.specs.os}} <br>
           {{"Rating : "+x.rating}} <br>
-          {{"Storage : "+x.specs.storage}} <br>
+          {{"Storage : "+x.specs.storage}}<br>
+          {{"Camera: "+x.specs.camera}} <br>
 
 <md-button class="md-primary md-raised" style="height:20px;width:20px"ng-click="showAdvanced($event,x)"> Open </md-button>
 </center>
