--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -1,7 +1,7 @@
 
 
 <div  id="popupContainer" >
-  <div layout="row" layout-wrap>
+  <div  layout="row" layout-wrap layout-align="center center">
 
     <!-- using the customFilter to traverse through all the list -->
     <md-card ng-repeat="x in jsonRecord | customFilter : arrayManufacturer : arrayStorage : osarray :cameraarray">
