--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -9,19 +9,20 @@
       <md-card-title>
         <img style="height:350px;width:300px;" ng-src={{x.image.small}} class="md-card-image"><br>
       </md-card-title>
-      <md-card-content layout="column" >
-        <div class="md-toolbar-tools usableTool"> <center>
-         {{x.id+""}}{{" "+x.name}}
+      <md-card-content layout="column"  layout-align="center center">
+        <div class="md-toolbar-tools usableTool"  layout-align="center center">
+        {{" "+x.name}}
           </div>
 
           {{"Price : "+x.price}} <br>
           {{"OS : "+x.specs.os}} <br>
           {{"Rating : "+x.rating}} <br>
           {{"Storage : "+x.specs.storage}}<br>
-          {{"Camera: "+x.specs.camera}} <br>
+          {{"Camera: "+x.specs.camera}} <br/>
 
-<md-button class="md-primary md-raised" style="height:20px;width:20px"ng-click="showAdvanced($event,x)"> Open </md-button>
-</center>
+<md-button class="md-primary md-raised" style="height:20px;width:20px"ng-click="showAdvanced($event,x)"> Buy </md-button>
+
+<md-button class="md-primary md-raised" style="height:20px;width:20px" ng-click="addToCart(x)"> Add To Cart </md-button>
       </md-card-content>
     </md-card>
   </div>
