--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,14 @@
-<!-- here navbar directive is used -->
+
 <md-toolbar  class="md-toolbar-tools" style="position:fixed;" >
   <md-button ng-click="toggleLeft()" class="md-raised md-primary md-icon-button">
-  <span><md-icon><i class="material-icons">menu</i></md-icon></span></md-button>
+  <span><md-icon><i class="material-icons">&#xE896;</i></md-icon></span></md-button>
 <p> <strong>AngularJS Starter App </strong> </p>
-<!-- <md-button ng-click="sendLogin()" class="md-raised md-primary md-icon-button">
-  <span> <md-icon> <i class="material-icons"> exit-to-app</i> </md-icon> </span> </md-button> -->
+
+  <span flex> </span>
+
+  <!-- <md-button class="md-raised md-primary md-icon-button"><span> <md-icon> <i class="material-icons">&#xe116;</i> </md-icon></span></md-button> -->
+<md-button class="md-raised" ng-click="Logout()">Log Out </md-button>
+
 </md-toolbar>
-<md-content class="md-padding" >
+<md-content class="md-padding">
 </md-content>
