--- a/fundooApp/templates/forgotPassword.html
+++ b/fundooApp/templates/forgotPassword.html
@@ -1,14 +1,14 @@
-<md-card layout-align="center center">
-  <form name="myform"  style="border:2px solid black;" >
-    <h1 id="button"><center><b>Forgot Password Form</b></center></h1><br><br>
-    <md-input-container id="registration" class="md-block" >
+<md-card layout-align="center center"   id="forgot" >
+  <h1 id="button"><b>Forgot Password Form</b></h1>
+  <form name="myform"  layout="column">
+
+    <md-input-container style="margin-top:30px;"  >
       <label>Email</label>
-      <input type="text" name="email" ng-model="useremail" ng-pattern="/^.+@.+\..+$/" required/>
-      <div ng-messages="myform.email.$error">
-        <div ng-message="[pattern]">You must enter valid email address.for eg abc@gmail.com</div>
-      </div>
-      <div layout-align="center center">
-        <md-button ng-click="forgotPass()" class="md-raised" id="button" style="margin:auto;display:block">submit</md-button>
+      <input type="text" name="emailId" ng-model="emailId" ng-pattern="/^.+@.+\..+$/" required/>
+      <span class="errors" ng-show="(myform.$submitted || myform.emailId.$touched) && myform.emailId.$error.required && !focused">
+      You must enter valid email address.for eg abc@gmail.com</span>
+      <div >
+        <md-button ng-click="forgotModel()" class="md-raised" id="button" style="margin:auto;display:block">submit</md-button>
       </div>
     </md-input-container>
   </form>
