--- a/fundooApp/templates/Login.html
+++ b/fundooApp/templates/Login.html
@@ -1,4 +1,4 @@
-<md-card layout-align="center center" id="forgot">
+<md-card layout-align="center center" id="forgot" >
     <h1 id="button"><b>Login Form</b></h1>
   <form name="myform" class ="fonts" class="parent" layout="column" >
 
@@ -11,7 +11,7 @@
 
     <md-input-container id="login" style="margin-top:30px;">
       <label>Password </label>
-      <input type="password" name="password" ng-model="password" minlength="6" md-maxlength="10" required/>
+      <input type="password" name="password" ng-model="password" minlength="6" maxlength="10" required/>
       <span class="errors" ng-show="(myform.$submitted || myform.password.$touched) && myform.password.$error.required && !focused">
       please fill password</span>
         <div layout-align="center center">
@@ -21,3 +21,4 @@
       </md-input-container>
       </form>
       </md-card>
+s
