--- a/fundooApp/templates/resetPassword.html
+++ b/fundooApp/templates/resetPassword.html
@@ -1,5 +1,5 @@
-<md-card layout-align="center center">
-  <form name="myform"  style="border:2px solid black;" >
+<md-card layout-align="center center" id="forgot">
+  <form name="myform" >
     <h1 id="button"><center><b>Reset Password Form</b></center></h1><br><br>
     <md-input-container id="registration" class="md-block" >
       <label>New Password</label>
