--- a/fundooApp/templates/icon.html
+++ b/fundooApp/templates/icon.html
@@ -7,13 +7,15 @@
 <md-icon><img src= "images/baseline-person_add-24px.svg"/></md-icon><md-tooltip>Collabarator</md-tooltip>
 </md-button>
 
-<md-menu>
+<md-menu layout="column">
 <md-button aria-label="Open menu with custom trigger" class="md-icon-button" ng-mouseenter="$mdMenu.open()">
   <md-icon>  <img src="images/baseline-color_lens-24px.svg"/></md-icon><md-tooltip>Change color</md-tooltip>
 </md-button>
-<md-menu-content width="4" ng-mouseleave="$mdMenu.close()">
-  <md-menu-item ng-repeat="item in [1, 2, 3]">
-    <md-button>  Option {{item}}
+<md-menu-content ng-mouseleave="$mdMenu.close()">
+  <md-menu-item ><div ng-repeat="customer in customerData">
+        <div ng-style="{background:colors[$index]}" style="border-radius:20px; width=300px;"; ng-click="updateNote(note,customer.color)">&nbsp; {{customer.color}}</div>
+
+    </div>
     </md-button>
   </md-menu-item>
 </md-menu-content>
