--- a/fundooApp/templates/navbar.html
+++ b/fundooApp/templates/navbar.html
@@ -36,12 +36,10 @@
      <md-tooltip>Notification</md-tooltip>
    </md-button>
 
-<md-button class="md-icon-button">
-  <md-icon> <i class="material-icons" style="color: black;">account_circle</i></md-icon>
+<md-button class="md-icon-button" ng-click="logout()">
+<img src="images/googleaccount.jpg" style="width:30px;height:28px; border-radius: 76px;"/><md-tooltip>account circle</md-tooltip>
   <md-tooltip>Google Account</md-tooltip>
 </md-button>
-  <span flex> </span>
+
 
 </md-toolbar>
-<md-content class="md-padding">
-   </md-content>
