--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -56,6 +56,28 @@ border-radius: 60px;
   style="color: black;"
     margin: 7px 4px 3px 6px;
 }
+span[contentEditable="true"] {
+    outline: none;
+}
 #sidebar{
   margin :0px 0px 0px 30px;
+}
+.colornote{
+  border-radius:20px;
+  width:50px;
+  height:50px;
+}
+.das{
+  width:600px;
+  margin: 25px -211px 0px 454px;
+}
+
+.colorBox{
+  width:30px;
+  height:30px;
+  margin: 10px 20px 10px 20px;
+  border-radius:50px;
+}
+.content{
+  margin-top:40px;
 }
