--- a/fundooApp/templates/icon.html
+++ b/fundooApp/templates/icon.html
@@ -48,8 +48,8 @@
   </md-menu>
 </div>
 
-
-<!-- <md-button class="md-icon-button" ng-click="isArchive(notes)" >
+<!-- 
+<md-button class="md-icon-button" ng-click="isArchive(note)" >
                 <md-icon><i class="material-icons noteicon1">unarchive</i></md-icon>
                 <md-tooltip>Unarchive</md-tooltip>
               </md-button> -->
