--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -78,6 +78,9 @@ span[contentEditable="true"] {
   margin: 10px 20px 10px 20px;
   border-radius:50px;
 }
+.intial-text after-click{
+  width: :100px;
+}
 .content{
   margin-top:40px;
 }
