--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -1,4 +1,4 @@
-<div id="sidenavId" >
+<div id="sidenavId" flex=100  style="padding-left: 150;">
 
   <div style="margin-left : 400px;margin-top:20px;">
     <md-card style="width:600px;" ng-show="!showWhenClicked">
@@ -9,15 +9,14 @@
 </div>
 
 <div layout="row">
-  <md-card ng-show="showWhenClicked" style="width:600px; margin: 0px 0px 0px 454px;">
+  <md-card ng-show="showWhenClicked" style="width:500px; margin: 0px 0px 0px 454px;" >
       <div layout="row">
-      <div contenteditable class="intial-text" data-placeholder="Title" ng-model="title"></div><br>
-      <!-- <p>{{text}}</p> -->
-      <img src="images/pin.svg" style="padding-left: 530px; ">
-      <md-tooltip>pin</md-tooltip>
-    </div>
+      <div contenteditable class="intial-text" data-placeholder="Title" ng-model="title" style="width:400px;margin-top: 10px;"> </div>
+    <span><img src="images/pin.svg" style="padding-left: 74px;padding-top: 9px "></span>
+    <md-tooltip>pin</md-tooltip>
+      </div>
       <div layout="row">
-      <input type="text" placeholder="Take a note..." ng-model="description" style="width:400px;"/>
+    <div contenteditable class="intial-text" data-placeholder="Take a note..." ng-model="description" style="width:400px;margin-top: 10px;"></div>
     </div>
 <icon> </icon>
     <div layout="row">
@@ -26,9 +25,9 @@
 </div>
 </div>
 
-<div  style="height:200%;margin-left: 302px;">
-  <div layout="row"  layout-xs="column" layout-align="center center" data-ng-init="getAllNote()">
-    <md-card style="background-color:{{note.color}}" ng-repeat="note in notes | filter:{trash:false,archive:false,pin:false} " flex="30" ng-mouseover="hoverIn($event)" ng-mouseleave="hoverOut($event)" flex="30" layout-xs="column" padding:"20px;">
+<div style="height: 150px;"  >
+  <div layout="row" layout-wrap layout-fill data-ng-init="getAllNote()" style="margin-top: 20px;" ng-click="showAdvanced($event,note)">
+    <md-card lex-gt-xs=30 flex-xs=100 style="background-color:{{note.color}}" ng-repeat="note in notes | filter:{trash:false,archive:false,pin:false}|orderBy: '-notes':true " flex="30" ng-mouseover="hoverIn($event)" ng-mouseleave="hoverOut($event)">
     <md-card-content><div>{{note.title}}</div>
     <div >{{note.description}}</div>
     <div layout="row" ng-show="hoverEdit"></div>
@@ -37,6 +36,5 @@
   </md-card>
 </div>
 </div>
-
 
 </div>
