--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -71,7 +71,22 @@ span[contentEditable="true"] {
   width:600px;
   margin: 25px -211px 0px 454px;
 }
-
+.navcard {
+  transition: all linear 0.5s;
+  background-color: lightblue;
+  height: 100px;
+  width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.navhide {
+  height: 50;
+  width: 50;
+  background-color: transparent;
+  top:-200px;
+  left: 200px
+}
 .colorBox{
   width:30px;
   height:30px;
@@ -80,6 +95,7 @@ span[contentEditable="true"] {
 }
 .intial-text{
   width: :100px;
+  font-weight: bold;
 }
 .content{
   margin-top:40px;
@@ -87,4 +103,25 @@ span[contentEditable="true"] {
 div[contenteditable]:empty::before {
 	content: attr(data-placeholder);
 	color: #888a85;
+}
+.btn.active {
+    background-color: #666;
+    color: white;
+}
+.btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+}
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
