--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -1,40 +1,46 @@
-<div id="sidenavId" flex=100  style="padding-left: 150;">
+<div id="sidenavId" flex=100 style="padding-left: 150;">
 
   <div style="margin-left : 400px;margin-top:20px;">
     <md-card style="width:600px;" ng-show="!showWhenClicked">
       <div layout="row">
         <input type="text" placeholder="Take a note" style="width:400px;" ng-click="showWhenClicked=true" />
       </div>
-  </md-card>
-</div>
+    </md-card>
+  </div>
 
-<div layout="row">
-  <md-card ng-show="showWhenClicked" style="width:500px; margin: 0px 0px 0px 454px;" >
+  <div layout="row">
+    <md-card ng-show="showWhenClicked" style="width:500px; margin: 0px 0px 0px 454px;">
       <div layout="row">
-      <div contenteditable class="intial-text" data-placeholder="Title" ng-model="title" style="width:400px;margin-top: 10px;"> </div>
-    <span><img src="images/pin.svg" style="padding-left: 74px;padding-top: 9px "></span>
-    <md-tooltip>pin</md-tooltip>
+        <div contenteditable class="intial-text" convert-new-lines="true" data-placeholder="Title" ng-model="title" style="width:400px;margin-top: 10px;"></div>
+        <md-button class="md-icon-button" >
+        <md-icon><img src="images/pin.svg" style="padding-left: 32px;padding-top:9px; ">
+          <md-tooltip>pin</md-tooltip>
+        </md-icon>
+      </md-button>
       </div>
-      <div layout="row">
-    <div contenteditable class="intial-text" data-placeholder="Take a note..." ng-model="description" style="width:400px;margin-top: 10px;"></div>
+
+      <div contenteditable class="intial-text" data-placeholder="Take a note..." convert-new-lines="true" ng-model="description" style="width:400px;margin-top: 10px;"></div>
+      <icon> </icon>
+      <md-button ng-click="showWhenClicked=false;noteModel()" style="color: black;border-radius: 15px;margin: -38px 497px 5px 490px;margin-left: 415px">CLOSE</md-button>
+    </md-card>
+  </div>
+
+  <div style="height:150px;">
+    <div layout="row" layout-wrap layout-fill data-ng-init="getAllNote()" style="margin-top: 20px;">
+      <md-card style="background-color:{{note.color}};width:30%;" class="mycard"  ng-repeat="note in notes | filter:{trash:false,archive:false,pin:false}|orderBy: '-notes':true |filter:searchText" ng-mouseover="hoverIn($event)" ng-mouseleave="hoverOut($event)">
+        <md-card-content>
+      <p ng-click="showAdvanced($event,note)">{{note.title}}</p>
+      <md-button class="md-icon-button" ng-click="isPin(note)">
+          <md-icon>
+            <p ng-if="note.isPin==false"><img src="images/pin.svg"/></p>
+            <p ng-if="note.isPin==true"><img src="images/pin0.svg" style="backgoround-color:blue;"/></p>
+            <md-tooltip>pin</md-tooltip>
+          </md-icon>
+        </md-button>
+          <p ng-click="showAdvanced($event,note)">{{note.description}} </p>
+          <div layout="row" ng-show="hoverEdit"></div>
+        </md-card-content>
+        <icon></icon>
+      </md-card>
     </div>
-<icon> </icon>
-    <div layout="row">
-      <md-button ng-click="showWhenClicked=false;noteModel()" style="color:black; border-radius:05px;margin:-38px 496px 0px 490px;">CLOSE</md-button>
-  </md-card>
-</div>
-</div>
-
-<div style="height: 150px;"  >
-  <div layout="row" layout-wrap layout-fill data-ng-init="getAllNote()" style="margin-top: 20px;" ng-click="showAdvanced($event,note)">
-    <md-card lex-gt-xs=30 flex-xs=100 style="background-color:{{note.color}}" ng-repeat="note in notes | filter:{trash:false,archive:false,pin:false}|orderBy: '-notes':true " flex="30" ng-mouseover="hoverIn($event)" ng-mouseleave="hoverOut($event)">
-    <md-card-content><div>{{note.title}}</div>
-    <div >{{note.description}}</div>
-    <div layout="row" ng-show="hoverEdit"></div>
-    </md-card-content>
-    <icon></icon>
-  </md-card>
-</div>
-</div>
-
-</div>
+  </div>
