--- a/fundooApp/templates/navbar.html
+++ b/fundooApp/templates/navbar.html
@@ -1,3 +1,4 @@
+<div layout-align="center center">
 <md-toolbar  class="md-toolbar-tools" style="background-color:#fb0;"  id="md-icon" id="search" style="position:fixed;">
 
   <md-button class="md-icon-button"  ng-click="toggleLeft()" >
@@ -6,25 +7,27 @@
    </md-button>
 
 <div style="color: black;"><b>Google</b> keep</div>
+
 <md-list-item>
   <div style="background-color:white;height: 52px;width: 700px;">
   <img src="images/baseline-search-24px.svg" style="margin-top: 10px;">
   <span flex="5"></span>
-  <input placeholder="Search"/>
-    <img src="images/baseline-clear-24px.svg" style="margin-top: 10px; height: 16px;
-    overflow: visible;
-    width: 16px;">
+  <input type="text" placeholder="Search" ng-model="searchText"/>
+
 </div>
 </md-list-item>
+
    <md-button class="md-icon-button">
    <md-icon ><i class="material-icons" style="color: black;"> refresh</i></md-icon>
    <md-tooltip>refresh</md-tooltip>
  </md-button>
 
-   <md-button class="md-icon-button">
-   <md-icon> <i class="material-icons" style="color: black;">view_stream</i></md-icon>
-   <md-tooltip>list-view</md-tooltip>
+<div>
+   <md-button class="md-icon-button" ng-click="toggelView()">
+     <md-icon> <i class="material-icons" style="color: black;">list view</i></md-icon>
+   <md-tooltip>grid view </md-tooltip>
    </md-button>
+</div>
 
    <md-button class="md-icon-button">
      <md-icon><i class="material-icons" style="color: black; ">apps </i> </md-icon>
@@ -36,10 +39,23 @@
      <md-tooltip>Notification</md-tooltip>
    </md-button>
 
-<md-button class="md-icon-button" ng-click="logout()">
-<img src="images/googleaccount.jpg" style="width:30px;height:28px; border-radius: 76px;"/><md-tooltip>account circle</md-tooltip>
-  <md-tooltip>Google Account</md-tooltip>
-</md-button>
+   <md-button class="md-icon-button" ng-click="logOut()" >
+   <img src="images/baby.jpg" style="width:30px;height:28px; border-radius: 76px;"/><md-tooltip>account circle</md-tooltip>
+ </md-button>
+ </md-toolbar>
+ </div>
 
 
-</md-toolbar>
+  <div layout="column" layout-align="center center">
+  <md-card ng-show="myVar" style="width: 348px;margin-top: -3px;margin-left:974px;">
+    <md-card-content>
+      <div><img src="images/baby.jpg" style="width: 85px;height: 40px;border-radius: 50px;"/></div>
+      <strong style="padding-left:152px;"> aadira khan </strong>
+      <span style="padding-left:152px;">aadira392@gmail.com</span>
+      <md-button ng-click="goToLogin()" class="add-btn">Add account</md-button>
+      <span flex></span>
+      <md-button class ="md-icon-button" class="add-btn" ng-click="goToLogin()" style="width:80px;">Sign out</md-button>
+      <div  class="navhide" ng-hide="myVar"></div>
+    </md-card-content>
+  </md-card>
+</div>
