--- a/fundooApp/templates/trash.html
+++ b/fundooApp/templates/trash.html
@@ -1,6 +1,6 @@
 <div id="sidenavId" data-ng-init="getAllNote()" height:"200%" >
   <div layout="row" layout-wrap layout-fill style="padding-left:310px; margin-top: 100px;">
-    <md-card flex="30"  ng-repeat="note in notes " ng-style="{'background-color': note.color}" style="height:100px;">
+    <md-card flex="30"  ng-repeat="note in notes|filter:{trash:true} " ng-style="{'background-color': note.color}" style="height:100px;">
       <div layout="row">
         <strong>{{note.title}}</strong>
       </div>
