--- a/fundooApp/templates/pin.html
+++ b/fundooApp/templates/pin.html
@@ -5,7 +5,7 @@
         <strong>{{note.title}}</strong>
       </div>
       <md-button class="md-icon-button" ng-click="isPin(note)">
-      <md-icon><img src="images/pin.svg">
+      <md-icon><img src="images/pin0.svg">
       <md-tooltip>pin</md-tooltip>
       </md-icon>
     </md-button>
